<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/productImageCard"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_margin="16dp"
        android:src="@drawable/productitem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_item" />

    <TextView
        android:id="@+id/productNameCard"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/product_name_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/productImageCard"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/productPriceCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/productPrice"
        android:textAppearance="?attr/textAppearanceListItemSecondary"
        android:textColor="#FF1E00"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/productImageCard"
        app:layout_constraintTop_toBottomOf="@id/productNameCard" />

    <TextView
        android:id="@+id/productSizeCard"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/productSize"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/productImageCard"
        app:layout_constraintTop_toBottomOf="@id/productPriceCard" />

</androidx.constraintlayout.widget.ConstraintLayout>