<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ui.Activity.LoginActivity">


        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:text="@string/welcomeText"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/editetext"
            android:hint="@string/email"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTxt"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/editetext"
            android:hint="@string/password"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginEmail"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:padding="20dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createNewAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:text="@string/create_a_new_account"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>