<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ui.Activity.ProductActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            android:layout_width="34dp"
            android:layout_height="46dp"
            android:layout_margin="22dp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_arrow_back_black_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cardButton"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_margin="22dp"
            android:text="@string/cardItem"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#ECEF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="17dp"
            android:text="@string/product_name_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productImage" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="8dp"
            android:text="@string/productPrice"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productName" />

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="You're a creator. An innovator. Where do your ideas come from? Lots of ambition, hard work and attention to detail. Those are the same motivating factors behind these adidas NMD_R1 V2 Shoes. If you thought NMD was progressive, these kick it up a notch. The comfortable midsole is cushioned to return energy with every step you take. Propel forward in bold neon colors and leave no street unseen."
            android:textColor="#696969"
            android:textSize="12sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productPrice" />

        <TextView
            android:id="@+id/productSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/select_size"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/productSizeSmall"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="10dp"
            android:text="@string/productSizeSmall"
            android:textColor="@android:color/black"
            app:cornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/productSizeMedium"
            app:layout_constraintTop_toBottomOf="@id/productSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/productSizeMedium"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/productsize"
            android:text="@string/productSizeMedium"
            android:textColor="@android:color/black"
            app:cornerRadius="12dp"
            app:layout_constraintLeft_toRightOf="@+id/productSizeSmall"
            app:layout_constraintTop_toBottomOf="@id/productSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/productSizeLarge"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/productSizeLarge"
            android:textColor="@android:color/black"
            app:cornerRadius="12dp"
            app:layout_constraintLeft_toRightOf="@+id/productSizeMedium"
            app:layout_constraintTop_toBottomOf="@id/productSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToCard"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="220dp"
            android:layout_height="65dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#121212"
            android:text="@string/add_to_card"
            android:textColor="@android:color/white"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/addToBookmark"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToBookmark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/addtobookmark"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_bookmark_border_black_24dp"
            app:iconSize="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/addToCard"
            app:strokeColor="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>