<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ui.Activity.CardActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/backButtonCard"
                    android:layout_width="34dp"
                    android:layout_height="46dp"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_arrow_back_black_24dp"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="?actionBarSize"
                    android:text="@string/card"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/backButtonCard"
                    app:layout_constraintRight_toLeftOf="@+id/buttonCard"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCard"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="14dp"
                    android:text="@string/cardItem"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:cornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <TextView
            android:id="@+id/totalPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="34dp"
            android:text="@string/total"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPrice"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>