<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstCard"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_margin="24dp"
        android:background="@drawable/editetext"
        android:elevation="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/productImageList"
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/product_item"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productNameList"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="80dp"
            android:text="@string/product_name_title"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productImageList" />

        <TextView
            android:id="@+id/productPriceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="80dp"
            android:text="@string/productPrice"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            android:textColor="#FF1E00"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productImageList" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/firstCard">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>